# dat630-tc

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  apptainer.def  clusterImage.def  flake.nix  slurmjob
benchmarks/: CudaBenchmark.txt  CudaV1_block_size_Benchmark.txt  CudaV2_block_size_Benchmark.txt  vera-1-mpi-runtime-no-ompnest
cudaJobs/: benchParams  cudaJobArray  cuda_srun_1n_1m_1t  cuda_srun_1n_1m_2t  cuda_srun_1n_1m_4t  cuda_srun_1n_1m_8t
levelsTest/: srun_benchmark_1n_1m_64t_l1  srun_benchmark_1n_1m_64t_l2  srun_benchmark_1n_1m_64t_l3  srun_benchmark_1n_1m_64t_l4  srun_benchmark_1n_1m_64t_l5  srun_benchmark_1n_1m_64t_l6  srun_benchmark_1n_1m_64t_l7  treecodeBenchmark.txt
localjobs/: mpirun_depth_bench  openMP_threshold_bench
slurmjobs/: srun_benchmark_1n_1m_16t  srun_benchmark_1n_1m_1t  srun_benchmark_1n_1m_2t  srun_benchmark_1n_1m_32t  srun_benchmark_1n_1m_4t  srun_benchmark_1n_1m_64t  srun_benchmark_1n_1m_8t  srun_benchmark_1n_2m_16t  srun_benchmark_1n_2m_32t  srun_benchmark_1n_2m_8t  srun_benchmark_1n_4m_16t  srun_benchmark_1n_4m_8t  srun_benchmark_2n_1m_16t  srun_benchmark_2n_1m_1t  srun_benchmark_2n_1m_2t  srun_benchmark_2n_1m_32t  srun_benchmark_2n_1m_4t  srun_benchmark_2n_1m_64t  srun_benchmark_2n_1m_8t  srun_benchmark_2n_4m_8t  srun_benchmark_3n_1m_16t  srun_benchmark_3n_1m_1t  srun_benchmark_3n_1m_2t  srun_benchmark_3n_1m_32t  srun_benchmark_3n_1m_4t  srun_benchmark_3n_1m_64t  srun_benchmark_3n_1m_8t  srun_benchmark_4n_1m_16t  srun_benchmark_4n_1m_1t  srun_benchmark_4n_1m_2t  srun_benchmark_4n_1m_32t  srun_benchmark_4n_1m_4t  srun_benchmark_4n_1m_64t  srun_benchmark_4n_1m_8t  srun_benchmark_4n_4m_8t  srun_depth_bench
src/: clib.cpp  cudagravsum.cu  cudagravsum.cuh  cudatree.cu  cudatree.cuh  getparam.cpp  stdinc.h  (+11 more)
(+3 files in other folders)
